--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2024-01-11  Jeroen Ooms  <jeroenooms@gmail.com>
+
+	* src/Makevars.in: Export CC and CXX to support cross-compilation
+
 2024-01-05  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4
