--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2025-03-25  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.0.3
+
 2025-03-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/crc32c/CMakeLists.txt: Update minimum cmake version to 3.5 (and
