--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2025-04-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/crc32c/CMakeLists.txt: Correct separator in
+	cmake_minimum_required to three dots
+
 2025-03-25  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.3
